// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with large param 1`] = `
.c0 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  box-shadow: inset 0 -1px 0 0 #E2E6E3;
}

.c1 {
  border: 0;
  background-color: transparent;
  color: #1785FB;
  font: 400 16px/24px 'Roboto';
  padding: 8px;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 -4px 0 0 #47DB99;
}

.c1.is-selected,
.c1.is-selected:hover {
  box-shadow: inset 0 -4px 0 0 #2C2C2C;
  color: #2C2C2C;
}

<div>
  <ul
    className="c0"
  >
    <li>
      <button
        className="is-selected c1"
        onClick={[Function]}
      >
        wadus
      </button>
    </li>
    <li>
      <button
        className="c1"
        onClick={[Function]}
      >
        world
      </button>
    </li>
  </ul>
  <div>
    Hola
  </div>
</div>
`;

exports[`render renders with selected as number 1`] = `
.c0 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  box-shadow: inset 0 -1px 0 0 #E2E6E3;
}

.c1 {
  border: 0;
  background-color: transparent;
  color: #1785FB;
  font: 400 12px/20px 'Roboto';
  padding: 8px;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 -2px 0 0 #47DB99;
}

.c1.is-selected,
.c1.is-selected:hover {
  box-shadow: inset 0 -2px 0 0 #2C2C2C;
  color: #2C2C2C;
}

<div>
  <ul
    className="c0"
  >
    <li>
      <button
        className="c1"
        onClick={[Function]}
      >
        wadus
      </button>
    </li>
    <li>
      <button
        className="is-selected c1"
        onClick={[Function]}
      >
        world
      </button>
    </li>
  </ul>
  <div>
    Mundo
  </div>
</div>
`;

exports[`render renders with selected as string 1`] = `
.c0 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  box-shadow: inset 0 -1px 0 0 #E2E6E3;
}

.c1 {
  border: 0;
  background-color: transparent;
  color: #1785FB;
  font: 400 12px/20px 'Roboto';
  padding: 8px;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 -2px 0 0 #47DB99;
}

.c1.is-selected,
.c1.is-selected:hover {
  box-shadow: inset 0 -2px 0 0 #2C2C2C;
  color: #2C2C2C;
}

<div>
  <ul
    className="c0"
  >
    <li>
      <button
        className="c1"
        onClick={[Function]}
      >
        wadus
      </button>
    </li>
    <li>
      <button
        className="is-selected c1"
        onClick={[Function]}
      >
        world
      </button>
    </li>
  </ul>
  <div>
    Mundo
  </div>
</div>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  list-style: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  box-shadow: inset 0 -1px 0 0 #E2E6E3;
}

.c1 {
  border: 0;
  background-color: transparent;
  color: #1785FB;
  font: 400 12px/20px 'Roboto';
  padding: 8px;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: inset 0 -2px 0 0 #47DB99;
}

.c1.is-selected,
.c1.is-selected:hover {
  box-shadow: inset 0 -2px 0 0 #2C2C2C;
  color: #2C2C2C;
}

<div>
  <ul
    className="c0"
  >
    <li>
      <button
        className="is-selected c1"
        onClick={[Function]}
      >
        wadus
      </button>
    </li>
    <li>
      <button
        className="c1"
        onClick={[Function]}
      >
        world
      </button>
    </li>
  </ul>
  <div>
    Hola
  </div>
</div>
`;
